// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot 1`] = `
<ToolBarButton__StyledButton
  aria-label=""
  className=""
  data-balloon-pos="up"
>
  <i
    className="fa fa-check"
  />
</ToolBarButton__StyledButton>
`;

exports[`matches test renderer snapshot serializes the styles 1`] = `
<button
  aria-label=""
  className="ToolBarButton__StyledButton-qi1boi-0 hLRtS"
  data-balloon-pos="up"
>
  <i
    className="fa fa-check"
  />
  
</button>
`;
